--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,46 @@
-body {
-  background-color: #F2F2F2; 
+/*Parei no Header no minuto -08:39 */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.logo {
-  margin: auto;
-  background-color: blue;
-  width: 90%;
-  height: 40px;
+body {
+  background-color: #F2F2F2;
+  font-family: Arial, Helvetica, sans-serif;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+#App {
+ 
+}
+
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #4A90E2;
+  height: 64px;  
+}
+
+.header div {
+  display: flex;
+  align-items: center;
+
+  font-size: 15px;
+  color: white;
+  font-weight: bold;
+}
+
+.header div p {
+  margin-right: 8px;
+}
+
+.header div img {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
 }
