--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,11 @@ body {
   -webkit-font-smoothing: antialiased !important;
 }
 
-#App {
- 
-}
-
-
 .header {
+  max-width: 1100;
+  margin: 0 auto;
+  padding: 0 30px;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -43,4 +42,81 @@ body {
   width: 24px;
   height: 24px;
   border-radius: 50%;
+}
+
+.PostList {
+  width: 700px;
+  margin: 0 auto 20px;
+}
+
+.PostItem {
+  margin-top: 20px;
+  border-radius: 8px;
+  background: white;
+  padding: 20px;
+  color: #3e3e3e;
+  line-height: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.DataPost {
+  display: flex;
+  align-items: center;
+}
+
+.DataPost .datatext {
+  margin-left: 10px;  /*  margin de 10px do lado esquerdo */
+  display: flex;
+  flex-direction: column;   /* direcinar o flex em vez de linha para coluna */
+  font-size: 11px;
+  color: #9a9a9a;
+  line-height: 14px;    /* Espaço altura entre as linhas */
+}
+
+.DataPost .datatext span:first-child {  /* primeira TAG "span" */
+  font-size: 14px;
+  color: #4a4a4a;
+  font-weight: bold;
+  margin-bottom: 3px; /* margin inferior de 3px */
+}
+
+.avatar {
+  min-height: 32px;
+  min-width: 32px;
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+}
+
+.postContent {
+  margin-top: 15px;
+  font-size: 14px;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background: #eeeeee;
+}
+
+.CommentPost {
+  margin-top: 20px;
+}
+
+.postComment {
+  margin-top: 20px;
+  display: flex;
+}
+
+.postComment p {
+  border-radius: 20px;
+  background: #eeeeee;
+  margin-left: 10px;
+  padding: 15px;
+  font-size: 13px;
+}
+
+.postComment span {
+  font-weight: bold;
+  margin-right: 6px;
 }
